Update page to include input for shortened url and add additional post method for navigating to the url

--- a/Twtr.UrlShortener.WebApp/Pages/Index.cshtml
+++ b/Twtr.UrlShortener.WebApp/Pages/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "{handler?}/{urlId?}"
 @model IndexModel
 @{
     ViewData["Title"] = "Twtr URL Shortener";
@@ -6,17 +6,21 @@
 
 
 <div class="text-center">
+
     <h1 class="display-4">Welcome to TWTR</h1>
+
     <p>Enter a URL and hit Generate to get a shortened user-friendly URL.</p>
     <form class="form-horizontal" method="post">
         <label for="FullUrl">Url:</label>
         <input type="text" name="FullUrl" />
-        <button type="submit">Generate</button>
-        <br />
-        <br />
-        <label for="ShortenedUrl">Generated URL:</label>
-        <input type="text" name="ShortenedUrl" value="@Model.ShortenedUrl"/>
+        <button asp-page-handler="Shorten" type="submit">Generate</button>
     </form>
 
-
+    <form class="form-horizontal" method="post">
+        <h3>Your generated URL</h3>
+        <p></p>
+        <input type="text" id="shortenedUrl" value="@Model.ShortenedUrl" />
+        <button asp-page-handler="Navigate" type="submit">Go</button>
+        <input type="hidden" id="UrlID" value="@Model.UrlID" />
+    </form>
 </div>
